--- a/pages/Lidl.html
+++ b/pages/Lidl.html
@@ -40,6 +40,7 @@
 
       <!-- Nav Links -->
       <ul class="flex space-x-8 font-semibold text-gray-800">
+        <li><a href="/pages/index.html" class="hover:text-[#bebab4]">Accueil</a></li>
         <li><a href="/pages/UPPA.html" class="hover:text-[#bebab4] no-underline text-gray-800">UPPA</a></li>
         <li><a href="/pages/Hexagone.html" class="hover:text-[#bebab4] no-underline text-gray-800">Hexagone</a></li>
         <li><a href="/pages/Lidl.html" class="hover:text-[#bebab4] no-underline text-gray-800">Lidl</a></li>
