--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
 
 
 <body class="">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../css_pages/style_index.css">
 
 <!-- NAVBAR Section -->
   <!-- Top Bar -->
