--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Merch-Unity</title>
   <script src="https://cdn.tailwindcss.com"></script> <!-- FrameWork Tailwind -->
-  <link rel="icon" href="Image2-modified.png" type="image/png">
+  <link rel="icon" href="../images/Image2-modified.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 
 </head>
@@ -40,7 +40,7 @@
 
       <!-- Logo -->
       <div class="flex items-center space-x-2">
-        <img src="Image2-modified.png" class= "w-9 h-9 text-red-500">
+        <img src="../images/Image2-modified.png" class= "w-9 h-9 text-red-500">
         <span class="text-2xl font-bold text-gray-800">Merch <span class="font-light">Unity</span></span>
       </div>
 
@@ -68,7 +68,7 @@
   </nav>
 <br><br>
   <div class="container">
-    <img src="back1.jpeg" class="img1">
+    <img src="../images/back1.jpeg" class="img1">
   </div>
 
   <!--Bienvenue-->
