--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script> <!-- FrameWork Tailwind -->
   <link rel="icon" href="../images/Image2-modified.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 
@@ -72,69 +73,93 @@
   </div>
 
   <!--Bienvenue-->
-  <div class="back-txt">
-    Bienvenue chez Merch-Unity !
+  <div class="container-fluid">
+    <div class="back-txt col-md-12">
+      Bienvenue chez Merch-Unity !
+    </div>
   </div>
+  
   <br>
-  <div class="container">
-    <div class="titre">
-      Les nouveautés 🎁
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="container">
+        <div class="titre">
+          Les nouveautés 🎁
+        </div>
+        <br>
+      </div>
     </div>
   </div>
   <br>
+  <div class="container">
+    <br>
+    
+    <div class="row">
+      <div class="product-card col-md-4">
+        <div class="product-img-container">
+          <div class="product-img"></div>
+        </div>
+        <div class="product-info">
+          <h2 class="product-title">Nike Shoes</h2>
+          <p class="product-description">High-quality Nike shoes for your active lifestyle.</p>
+          <p class="product-price">$129.99</p>
+          <div class="icon-container">
+            <i class="fas fa-heart"></i>
+            <i class="fas fa-shopping-cart cart-icon"></i>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="product-card col-md-4">
+        <div class="product-img-container">
+          <div class="product-img"></div>
+        </div>
+        <div class="product-info">
+          <h2 class="product-title">Nike Shoes</h2>
+          <p class="product-description">High-quality Nike shoes for your active lifestyle.</p>
+          <p class="product-price">$129.99</p>
+          <div class="icon-container">
+            <i class="fas fa-heart"></i>
+            <i class="fas fa-shopping-cart cart-icon"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="product-card col-md-4">
+        <div class="product-img-container">
+          <div class="product-img"></div>
+        </div>
+        <div class="product-info">
+          <h2 class="product-title">Nike Shoes</h2>
+          <p class="product-description">High-quality Nike shoes for your active lifestyle.</p>
+          <p class="product-price">$129.99</p>
+          <div class="icon-container">
+            <i class="fas fa-heart"></i>
+            <i class="fas fa-shopping-cart cart-icon"></i>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+  
 
 <!--Déroulant des nouveautés-->
 <div class="wrapper">
 
 
   <!-- Produit 1-->
-  <div class="product-card">
-    <div class="product-img-container">
-      <div class="product-img"></div>
-    </div>
-    <div class="product-info">
-      <h2 class="product-title">Nike Shoes</h2>
-      <p class="product-description">High-quality Nike shoes for your active lifestyle.</p>
-      <p class="product-price">$129.99</p>
-      <div class="icon-container">
-        <i class="fas fa-heart"></i>
-        <i class="fas fa-shopping-cart cart-icon"></i>
-      </div>
-    </div>
-  </div>
+  
 
 
   <!-- Produit 2-->
-  <div class="product-card">
-    <div class="product-img-container">
-      <div class="product-img"></div>
-    </div>
-    <div class="product-info">
-      <h2 class="product-title">Nike Shoes</h2>
-      <p class="product-description">High-quality Nike shoes for your active lifestyle.</p>
-      <p class="product-price">$129.99</p>
-      <div class="icon-container">
-        <i class="fas fa-heart"></i>
-        <i class="fas fa-shopping-cart cart-icon"></i>
-      </div>
-    </div>
-  </div>
+  
 
   <!-- Produit 3-->
-  <div class="product-card">
-    <div class="product-img-container">
-      <div class="product-img"></div>
-    </div>
-    <div class="product-info">
-      <h2 class="product-title">Nike Shoes</h2>
-      <p class="product-description">High-quality Nike shoes for your active lifestyle.</p>
-      <p class="product-price">$129.99</p>
-      <div class="icon-container">
-        <i class="fas fa-heart"></i>
-        <i class="fas fa-shopping-cart cart-icon"></i>
-      </div>
-    </div>
-  </div>
+  
 
 </div>  
 <br>
