--- a/pages/UPPA.html
+++ b/pages/UPPA.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Merch-Unity</title>
   <script src="https://cdn.tailwindcss.com"></script> <!-- FrameWork Tailwind -->
+  <!-- Favicon-->
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <!-- Bootstrap icons-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Core theme CSS (includes Bootstrap)-->
+  <link href="/css_pages/style.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
 
@@ -33,14 +40,15 @@
     <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
 
       <!-- Logo -->
-      <div class="flex items-center space-x-2">
-        <img src="/nav_bar_tests/Image2-modified.png" class= "w-9 h-9 text-red-500">
-        <span class="text-2xl font-bold text-gray-800">Merch <span class="font-light">Unity</span></span>
-      </div>
+      <button onclick="window.location.href='index.html';">
+        <div class="flex items-center space-x-2">
+          <img src="../images/Image2-modified.png" class= "w-9 h-9 text-red-500">
+          <span class="text-2xl font-bold text-gray-800">Merch <span class="font-light">Unity</span></span>
+        </div>
+       </button>
 
       <!-- Nav Links -->
-      <ul class="flex space-x-8 font-semibold text-gray-800">
-        <li><a href="/pages/index.html" class="hover:text-[#bebab4]">Accueil</a></li>
+      <ul class="flex space-x-8 font-semibold text-gray-800" style="font-size: 16px;">
         <li><a href="/pages/UPPA.html" class="hover:text-[#bebab4]">UPPA</a></li>
         <li><a href="/pages/Hexagone.html" class="hover:text-[#bebab4]">Hexagone</a></li>
         <li><a href="/pages/Lidl.html" class="hover:text-[#bebab4]">Lidl</a></li>
@@ -64,21 +72,7 @@
 
 </body>
 </html>
-<!--TESTS-->
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="/css_pages/style.css" rel="stylesheet" />
-    </head>
+
     
         <!-- Header-->
         <header class="header-bg-uppa">
