--- a/pages/UPPA.html
+++ b/pages/UPPA.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Merch-Unity</title>
+  <link rel="icon" href="../images/Image2-modified.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script> <!-- FrameWork Tailwind -->
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
