--- a/pages/Lidl.html
+++ b/pages/Lidl.html
@@ -20,7 +20,7 @@
   <div class="w-full border-b text-gray-600 text-xs">
     <div class="max-w-7xl mx-auto px-4 flex justify-between py-2">
       <div class="flex space-x-4">
-        <a href="#" class="hover:underline">A propos</a>
+        <a href="/pages/about.html" class="hover:underline">A propos</a>
         <a href="#" class="hover:underline">Vie privée</a>
         <a href="#" class="hover:underline">Contact</a>
         <a href="#" class="hover:underline">Collaborateurs</a>
@@ -52,6 +52,7 @@
         <li><a href="/pages/UPPA.html" class="hover:text-[#bebab4] no-underline text-gray-800">UPPA</a></li>
         <li><a href="/pages/Hexagone.html" class="hover:text-[#bebab4] no-underline text-gray-800">Hexagone</a></li>
         <li><a href="/pages/Lidl.html" class="hover:text-[#bebab4] no-underline text-gray-800">Lidl</a></li>
+        <li><a href="/pages/crea.html" class="hover:text-[#bebab4] no-underline text-gray-800">Vos créations</a></li>
 
         <li class="relative">
         </li>
@@ -71,9 +72,7 @@
     </div>
   </nav>
 
-
-
-    
+  
         <!-- Header-->
         <header class="header-bg-lidl">
             <div class="container px-4 px-lg-5 my-5">
