--- a/pages/crea.html
+++ b/pages/crea.html
@@ -72,14 +72,14 @@
     </div>
   </nav>
 
-</body>
-</html>
 
+
+    
         <!-- Header-->
-        <header class="header-bg-hex">
+        <header class="header-bg-crea">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-black">
-                    <h1 class="display-4 fw-bolder">Welcome to Hexagone !</h1>
+                    <h1 class="display-4 fw-bolder">A vos créations !</h1>
                     <p class="lead fw-normal text-black-50 mb-0">
                         Lorem ipsum
                     </p>
@@ -94,7 +94,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <img class="card-img-top" src="/images/prod_lidl_1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
