--- a/pages/UPPA.html
+++ b/pages/UPPA.html
@@ -12,7 +12,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="/css_pages/style.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
 
@@ -21,7 +20,7 @@
   <div class="w-full border-b text-gray-600 text-xs">
     <div class="max-w-7xl mx-auto px-4 flex justify-between py-2">
       <div class="flex space-x-4">
-        <a href="#" class="hover:underline">A propos</a>
+        <a href="/pages/about.html" class="hover:underline">A propos</a>
         <a href="#" class="hover:underline">Vie privée</a>
         <a href="#" class="hover:underline">Contact</a>
         <a href="#" class="hover:underline">Collaborateurs</a>
@@ -50,9 +49,11 @@
 
       <!-- Nav Links -->
       <ul class="flex space-x-8 font-semibold text-gray-800" style="font-size: 16px;">
-        <li><a href="/pages/UPPA.html" class="hover:text-[#bebab4]">UPPA</a></li>
-        <li><a href="/pages/Hexagone.html" class="hover:text-[#bebab4]">Hexagone</a></li>
-        <li><a href="/pages/Lidl.html" class="hover:text-[#bebab4]">Lidl</a></li>
+        <li><a href="/pages/UPPA.html" class="hover:text-[#bebab4] no-underline text-gray-800">UPPA</a></li>
+        <li><a href="/pages/Hexagone.html" class="hover:text-[#bebab4] no-underline text-gray-800">Hexagone</a></li>
+        <li><a href="/pages/Lidl.html" class="hover:text-[#bebab4] no-underline text-gray-800">Lidl</a></li>
+        <li><a href="/pages/crea.html" class="hover:text-[#bebab4] no-underline text-gray-800">Vos créations</a></li>
+
         <li class="relative">
         </li>
       </ul>
@@ -70,6 +71,7 @@
       </div>
     </div>
   </nav>
+
 
 </body>
 </html>
