--- a/pages/about.html
+++ b/pages/about.html
@@ -6,8 +6,12 @@
   <title>Merch-Unity</title>
   <link rel="icon" href="../images/Image2-modified.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script> <!-- FrameWork Tailwind -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  
+  <!-- Favicon-->
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <!-- Bootstrap icons-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Core theme CSS (includes Bootstrap)-->
+  <link href="/css_pages/style.css" rel="stylesheet" />
 </head>
 
 
@@ -45,9 +49,11 @@
 
       <!-- Nav Links -->
       <ul class="flex space-x-8 font-semibold text-gray-800" style="font-size: 16px;">
-        <li><a href="/pages/UPPA.html" class="hover:text-[#bebab4]">UPPA</a></li>
-        <li><a href="/pages/Hexagone.html" class="hover:text-[#bebab4]">Hexagone</a></li>
-        <li><a href="/pages/Lidl.html" class="hover:text-[#bebab4]">Lidl</a></li>
+        <li><a href="/pages/UPPA.html" class="hover:text-[#bebab4] no-underline text-gray-800">UPPA</a></li>
+        <li><a href="/pages/Hexagone.html" class="hover:text-[#bebab4] no-underline text-gray-800">Hexagone</a></li>
+        <li><a href="/pages/Lidl.html" class="hover:text-[#bebab4] no-underline text-gray-800">Lidl</a></li>
+        <li><a href="/pages/crea.html" class="hover:text-[#bebab4] no-underline text-gray-800">Vos créations</a></li>
+
         <li class="relative">
         </li>
       </ul>
@@ -66,6 +72,7 @@
     </div>
   </nav>
 
+
   <div class="container-fluid">
     <header class="header-bg">
       <div class="container text-center text-white">
@@ -76,7 +83,7 @@
   <div class="row align-items-center text-center">
       <div class="col-md-12">
         <section>
-          <h2 style="font-weight: bold; text-decoration: underline;">⚠️ Un projet universitaire fictif ⚠️</h2>
+          <h2 style="font-weight: bold; text-decoration: underline;">⚠️ Merch Unity : Un projet universitaire fictif ⚠️</h2>
           <br>
           <p>
               Ce site de vente en ligne a été réalisé dans le cadre d’un projet universitaire à l’IUT des Pays de l’Adour,
@@ -108,7 +115,7 @@
     
 <br>
     <footer class="text-center mt-5 mb-3 text-muted">
-        <small>© 2025 - Projet universitaire fictif</small>
+        <small>© 2025 - Merch Unity</small>
     </footer>
 </body>
 </html>
