--- a/pages/index.html
+++ b/pages/index.html
@@ -315,7 +315,8 @@
         <div class="row">
           <div class="col-sm-12 col-md-6">
             <h6>A propos</h6>
-            <p class="text-justify pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, maiores? Autem dignissimos vel tempore asperiores quam, quasi hic ullam ut ipsa magni. Magnam illo tempore quos unde molestias numquam earum.</p>
+            <p class="text-justify pt-2">Boutique multi-marques réunissant des pièces originales, stylées et engagées.
+              <br>Mode, accessoires, lifestyle : découvre une sélection qui te ressemble.</p>
           </div>
 
           <div class="col-xs-6 col-md-3">
@@ -353,7 +354,7 @@
             <ul class="social-icons">
               <li><a class="facebook" href="#"><i class="fab fa-facebook"></i></a></li>
               <li><a class="twitter" href="#"><i class="fab fa-twitter"></i></a></li>
-              <li><a class="dribbble" href="#"><i class="fab fa-dribbble"></i></a></li>
+              <li><a class="instagram" href="#"><i class="fab fa-instagram"></i></a></li>
               <li><a class="linkedin" href="#"><i class="fab fa-youtube"></i></a></li>   
             </ul>
           </div>
