--- a/pages/Lidl.html
+++ b/pages/Lidl.html
@@ -23,7 +23,7 @@
       <div class="flex space-x-4">
         <a href="/pages/about.html" class="hover:underline">A propos</a>
         <a href="#" class="hover:underline">Vie privée</a>
-        <a href="#" class="hover:underline">Contact</a>
+        <a href="login.html" class="hover:underline">Contact</a>
         <a href="#" class="hover:underline">Collaborateurs</a>
       </div>
       <div class="flex space-x-4 items-center">
