--- a/pages/about.html
+++ b/pages/about.html
@@ -71,15 +71,15 @@
       </div>
     </div>
   </nav>
-
+<br>
 
   <div class="container-fluid">
     <header class="header-bg">
-      <div class="container text-center text-white">
+      <div class="container text-center text-black">
           <h1 class="display-4 fw-bolder">À propos</h1>
       </div>
   </header>
-
+<br><br>
   <div class="row align-items-center text-center">
       <div class="col-md-12">
         <section>
@@ -97,12 +97,12 @@
       <section class="mt-4">
           
           <p>
-              Ce site n’est en aucun cas affilié à LIDL, l'UPPA, le gouvernement ni à aucune autre marque mentionnée. Toute ressemblance avec des noms ou visuels existants est purement pédagogique.
+              Ce site n’est en aucun cas affilié à LIDL, l'UPPA, ni à aucune autre marque mentionnée. Toute ressemblance avec des noms ou visuels existants est purement pédagogique.
           </p>
       </section>
 
       <section class="mt-4">
-          <h2 style="text-decoration: underline;">Projet réalisé par :</h2>
+          <h2 style="text-decoration: underline;">Projet réalisé par :</h2><br>
           <p>
               AUDUBERTEAU Emilien & PEREZ Loris, étudiants en BUT1 Réseaux & Télécoms - Année 2024/2025.
           </p>
