--- a/pages/Lidl.html
+++ b/pages/Lidl.html
@@ -43,7 +43,7 @@
       <!-- Logo -->
       <button onclick="window.location.href='index.html';">
         <div class="flex items-center space-x-2">
-          <img src="../images/Image2-modified.png" class= "w-9 h-9 text-red-500">
+          <img src="../images/index_page/Image2-modified.png" class= "w-9 h-9 text-red-500">
           <span class="text-2xl font-bold text-gray-800">Merch <span class="font-light">Unity</span></span>
         </div>
        </button>
@@ -62,7 +62,7 @@
       <!-- Icons -->
       <div class="flex items-center space-x-6 text-gray-700">
         <a href="#"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M5 11a6 6 0 1112 0 6 6 0 01-12 0z"/></svg></a>
-        <a href="#"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z"/></svg></a>
+        <a href="login.html"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z"/></svg></a>
         <a href="#" class="relative">
           <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" >
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M17 13a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
@@ -94,7 +94,7 @@
                     <button onclick="window.location.href='produit.html';">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="/images/prod_lidl_1.png" alt="..." />
+                            <img class="card-img-top" src="/images/lidl_page/prod_lidl_1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -126,7 +126,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="/images/t-shirt-lidl.png" alt="..." />
+                            <img class="card-img-top" src="/images/lidl_page/t-shirt-lidl.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -159,7 +159,7 @@
                             <!-- Sale badge-->
                             
                             <!-- Product image-->
-                            <img class="card-img-top" src="/images/router-lidl.png" alt="..." />
+                            <img class="card-img-top" src="/images/lidl_page/router-lidl.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -189,7 +189,7 @@
                         <button onclick="window.location.href='produit.html';">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="/images/fenetre-lidl.png" alt="..." />
+                            <img class="card-img-top" src="/images/lidl_page/fenetre-lidl.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -220,7 +220,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="/images/bonbons-lidl.png" alt="..." />
+                            <img class="card-img-top" src="/images/lidl_page/bonbons-lidl.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -248,7 +248,7 @@
                         <button onclick="window.location.href='produit.html';">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="/images/RJ-lidl.png" alt="..." />
+                            <img class="card-img-top" src="/images/lidl_page/RJ-lidl.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -279,7 +279,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="/images/lindtXlidl.png" alt="..." />
+                            <img class="card-img-top" src="/images/lidl_page/lindtXlidl.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -309,7 +309,7 @@
                         <button onclick="window.location.href='produit.html';">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="/images/toiletpaper.png" alt="..." />
+                            <img class="card-img-top" src="/images/lidl_page/toiletpaper.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
