--- a/pages/UPPA.html
+++ b/pages/UPPA.html
@@ -43,7 +43,7 @@
       <!-- Logo -->
       <button onclick="window.location.href='index.html';">
         <div class="flex items-center space-x-2">
-          <img src="../images/Image2-modified.png" class= "w-9 h-9 text-red-500">
+          <img src="../images/index_page/Image2-modified.png" class= "w-9 h-9 text-red-500">
           <span class="text-2xl font-bold text-gray-800">Merch <span class="font-light">Unity</span></span>
         </div>
        </button>
@@ -98,7 +98,7 @@
                         <button onclick="window.location.href='produit.html';">
                             <div class="card h-100">
                                 <!-- Product image-->
-                                <img class="card-img-top" src="../images/casquette-uppa.png" alt="..." />
+                                <img class="card-img-top" src="../images/uppa_page/casquette-uppa.png" alt="..." />
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
@@ -132,7 +132,7 @@
                                 <!-- Sale badge-->
                                 <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">En solde</div>
                                 <!-- Product image-->
-                                <img class="card-img-top" src="../images/shirt-uppa.png" alt="..." />
+                                <img class="card-img-top" src="../images/uppa_page/shirt-uppa.png" alt="..." />
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
@@ -164,7 +164,7 @@
                             <div class="card h-100">
                             
                                 <!-- Product image-->
-                                <img class="card-img-top" src="../images/carnet-uppa.png" alt="..." />
+                                <img class="card-img-top" src="../images/uppa_page/carnet-uppa.png" alt="..." />
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
@@ -194,7 +194,7 @@
                         <button onclick="window.location.href='produit.html';">
                             <div class="card h-100">
                                 <!-- Product image-->
-                                <img class="card-img-top" src="../images/cleusb-uppa.png" alt="..." />
+                                <img class="card-img-top" src="../images/uppa_page/cleusb-uppa.png" alt="..." />
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
@@ -225,7 +225,7 @@
                             <div class="card h-100">
                             
                                 <!-- Product image-->
-                                <img class="card-img-top" src="../images/coque-uppa.png" alt="..." />
+                                <img class="card-img-top" src="../images/uppa_page/coque-uppa.png" alt="..." />
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
@@ -256,7 +256,7 @@
                         <button onclick="window.location.href='produit.html';">
                             <div class="card h-100">
                                 <!-- Product image-->
-                                <img class="card-img-top" src="../images/sac-uppa.png" alt="..." />
+                                <img class="card-img-top" src="../images/uppa_page/sac-uppa.png" alt="..." />
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
@@ -285,7 +285,7 @@
                                 <!-- Sale badge-->
                                 <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">En solde</div>
                                 <!-- Product image-->
-                                <img class="card-img-top" src="../images/sacordi-uppa.png" alt="..." />
+                                <img class="card-img-top" src="../images/uppa_page/sacordi-uppa.png" alt="..." />
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
@@ -316,7 +316,7 @@
                         <button onclick="window.location.href='produit.html';">
                             <div class="card h-100">
                                 <!-- Product image-->
-                                <img class="card-img-top" src="../images/veste-uppa.png" alt="..." />
+                                <img class="card-img-top" src="../images/uppa_page/veste-uppa.png" alt="..." />
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
