--- a/pages/about.html
+++ b/pages/about.html
@@ -42,7 +42,7 @@
       <!-- Logo -->
       <button onclick="window.location.href='index.html';">
         <div class="flex items-center space-x-2">
-          <img src="../images/Image2-modified.png" class= "w-9 h-9 text-red-500">
+          <img src="../images/index_page/Image2-modified.png" class= "w-9 h-9 text-red-500">
           <span class="text-2xl font-bold text-gray-800">Merch <span class="font-light">Unity</span></span>
         </div>
        </button>
