--- a/pages/login.html
+++ b/pages/login.html
@@ -46,7 +46,7 @@
           <!-- Logo -->
            <button onclick="window.location.href='index.html';">
             <div class="flex items-center space-x-2">
-              <img src="../images/Image2-modified.png" class= "w-9 h-9 text-red-500">
+              <img src="../images/index_page/Image2-modified.png" class= "w-9 h-9 text-red-500">
               <span class="text-2xl font-bold text-gray-800">Merch <span class="font-light">Unity</span></span>
             </div>
            </button>
@@ -80,7 +80,7 @@
     <div class="container-fluid h-custom">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-md-9 col-lg-6 col-xl-5">
-            <img class="img-fluid" src="../images/login-photo.png" style="border-radius: 10px;">
+            <img class="img-fluid" src="../images/login_page/login-photo.png" style="border-radius: 10px;">
           </div>
           <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
 
