--- a/pages/produit.html
+++ b/pages/produit.html
@@ -44,7 +44,7 @@
       <!-- Logo -->
       <button onclick="window.location.href='index.html';">
         <div class="flex items-center space-x-2">
-          <img src="../images/Image2-modified.png" class= "w-9 h-9 text-red-500">
+          <img src="../images/index_page/Image2-modified.png" class= "w-9 h-9 text-red-500">
           <span class="text-2xl font-bold text-gray-800">Merch <span class="font-light">Unity</span></span>
         </div>
        </button>
@@ -80,7 +80,7 @@
       <div class = "product-imgs">
         <div class = "img-display">
           <div class = "img-showcase">
-            <img src = "../images/shirt-uppa.png" alt = "shoe image">
+            <img src = "../images/uppa_page/shirt-uppa.png" alt = "shoe image">
             
           </div>
         </div>
