--- a/pages/index.html
+++ b/pages/index.html
@@ -74,16 +74,16 @@
   </nav>
 <br><br>
 
-<div class="container-fluid" style="margin: 0px; padding: 0px;">
-  <div class="row g-0 align-items-center justify-content-center" style="background-color: #46413b; height: 300px;">
-    <div class="col-12 text-center">
-      <div class="text-white fw-bold back-txt">
-        Bienvenue chez Merch-Unity !
+<header class="header-bg-index">
+  <div class="container px-4 px-lg-5 my-5">
+      <div class="text-center text-white">
+          <h1 class="display-4 fw-bolder">Welcome to LIDL !</h1>
+          <p class="lead fw-normal text-white-50 mb-0">
+              Le vrai prix des bonnes choses <em>et pas que pour les courses !</em>
+          </p>
       </div>
-    </div>
   </div>
-</div>
-
+</header>
 
   <br>
 
