--- a/pages/produit.html
+++ b/pages/produit.html
@@ -19,7 +19,7 @@
 
 <body class="font-sans text-sm">
   <!-- Top Bar -->
-  <div class="w-full border-b text-gray-600 text-xs">
+  <div class="w-full border-b text-gray-600index text-xs">
     <div class="max-w-7xl mx-auto px-4 flex justify-between py-2">
       <div class="flex space-x-4">
         <a href="/pages/about.html" class="hover:underline">A propos</a>
@@ -42,7 +42,7 @@
     <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
 
       <!-- Logo -->
-      <button onclick="window.location.href='index.html';">
+      <button onclick="window.location.href='index.php';">
         <div class="flex items-center space-x-2">
           <img src="../images/index_page/Image2-modified.png" class= "w-9 h-9 text-red-500">
           <span class="text-2xl font-bold text-gray-800">Merch <span class="font-light">Unity</span></span>
