--- a/pages/UPPA.html
+++ b/pages/UPPA.html
@@ -50,8 +50,8 @@
 
       <!-- Nav Links -->
       <ul class="flex space-x-8 font-semibold text-gray-800" style="font-size: 16px;">
-        <li><a href="/pages/UPPA.html" class="hover:text-[#bebab4] no-underline text-gray-800">UPPA</a></li>
-        <li><a href="/pages/Hexagone.html" class="hover:text-[#bebab4] no-underline text-gray-800">Hexagone</a></li>
+        <li><a href="pages/UPPA.html" class="hover:text-[#bebab4] no-underline text-gray-800">UPPA</a></li>
+        <li><a href="my-app/pages/UPPA.html" class="hover:text-[#bebab4] no-underline text-gray-800">Hexagone</a></li>
         <li><a href="/pages/Lidl.html" class="hover:text-[#bebab4] no-underline text-gray-800">Lidl</a></li>
         
 
